RESOLVED FIXED268544
Fix ignoring return value warning
https://bugs.webkit.org/show_bug.cgi?id=268544
Summary Fix ignoring return value warning
Pablo Saavedra
Reported 2024-02-01 04:46:43 PST
Fix ignoring return value warning ('warn_unused_result')
Attachments
Pablo Saavedra
Comment 1 2024-02-01 04:49:02 PST
EWS
Comment 2 2024-02-01 05:40:09 PST
Committed 273902@main (05b8197bbdfc): <https://commits.webkit.org/273902@main> Reviewed commits have been landed. Closing PR #23662 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.