Fix ignoring return value warning in WPEDisplayDRM::findDevice() https://bugs.webkit.org/show_bug.cgi?id=268544

Reviewed by Carlos Garcia Campos.

The 273896@main introduces an wrong use of fd.release(). This
leads in a build warning error and a potential file descriptor leak.
Use 'fd = { };' instead of this to reset as invalid.

* Source/WebKit/WPEPlatform/wpe/drm/WPEDisplayDRM.cpp:
(findDevice):

Canonical link: https://commits.webkit.org/273902@main